# neat

./: Cargo.toml  README.md  build-docs  log.txt  rustfmt.toml  update_ucd.py
assets/shaders/: font.frag  font.vert  phong.frag  phong.vert  simple.frag  simple.vert
examples/: README.md  balls.rs  phong.rs  rot_test.rs  solar.rs  spaceballs.rs  tables.rs
shaders/: font.frag  font.vert  phong.frag  phong.vert  simple.frag  simple.vert
src/: main.rs  math.rs  neat.rs  prelude.rs  render.rs  settings.rs  util.rs  vfs.rs
src/collision/: mod.rs
src/game/: entity.rs  game.rs  key.rs  mod.rs  state.rs  state_builder.rs
src/render/: camera.rs  color.rs  font.rs  mesh.rs  misc.rs  mod.rs  render.rs
src/render/mesh/: lit.rs  mod.rs  simple.rs
textures/: test.xcf
