[package]
name = "neat"
version = "0.1.0"
authors = ["Callum <cgtrolley@gmail.com>"]
build = "build/build.rs"

[lib]
name = "neat"
path = "src/neat.rs"

[dependencies]
glium = "0.22.*"
num = "0.1.*"
nalgebra = "0.8.*"
ncollide = "0.8.*"
nphysics3d = "0.3.*"
rusttype = "0.2.0"
unicode-normalization = "0.1.2"
log = "0.3.6"
simplelog = { git = "https://github.com/trolleyman/simplelog.rs" }
cfg-if = "0.1.0"
image = "0.8.0"
rand = "0.3.14"

[target.'cfg(target_os = "windows")'.dependencies]
user32-sys = "*"

[target.'cfg(target_os = "macos")'.dependencies]


[target.'cfg(target_os = "linux")'.dependencies]

[[bin]]
name = "neat"
path = "src/main.rs"
doc = false

# Examples generally increase in order of when they were added, which coincidentally
# is also their order of complexity.

[[example]]
name = "solar"
path = "examples/solar.rs"
[[example]]
name = "rot_test"
path = "examples/rot_test.rs"
[[example]]
name = "spaceballs"
path = "examples/spaceballs.rs"
[[example]]
name = "balls"
path = "examples/balls.rs"
[[example]]
name = "phong"
path = "examples/phong.rs"
[[example]]
name = "tables"
path = "examples/tables.rs"