[package]
name = "neat"
version = "0.1.0"
authors = ["Callum <cgtrolley@gmail.com>"]
build = "build/build.rs"

[lib]
name = "neat"
path = "src/neat.rs"

[[bin]]
name = "neat"
path = "src/main.rs"
doc = false

[dependencies]
glium = "0.22.*"
rusttype = { version = "0.7.*", features = ["gpu_cache"] }
image = "0.19.0"

nalgebra = "0.16.0"
ncollide3d = "0.17.1"
nphysics3d = "0.9.1"

num = "0.2.*"
unicode-normalization = "0.1.2"

log = "0.4.4"
simplelog = { git = "https://github.com/trolleyman/simplelog.rs" }

rand = "0.5.*"
cfg-if = "0.1.0"

[target.'cfg(windows)'.dependencies]
user32-sys = "*"


[profile.dev]
opt-level = 2

# Examples generally increase in order of when they were added, which coincidentally
# is also their order of complexity.

[[example]]
name = "solar"
path = "examples/solar.rs"
[[example]]
name = "rot_test"
path = "examples/rot_test.rs"
[[example]]
name = "spaceballs"
path = "examples/spaceballs.rs"
[[example]]
name = "balls"
path = "examples/balls.rs"
[[example]]
name = "phong"
path = "examples/phong.rs"
[[example]]
name = "tables"
path = "examples/tables.rs"
